--- a/api/.env.example
+++ b/api/.env.example
@@ -1,2 +1,2 @@
-SECRET_KEY='default-web-base'
-SQLALCHEMY_DATABASE_URI='mysql+pymysql://root:whutmyy123@tt.zkun.cn:3306/dr-x-test'
+SECRET_KEY="default-web-base"
+SQLALCHEMY_DATABASE_URI="mysql+pymysql://root:whutmyy123@tt.zkun.cn:3306/dr-x-test"
